--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,7 @@
+# Supabase Configuration
+NEXT_PUBLIC_SUPABASE_URL="https://your-project-id.supabase.co"
+NEXT_PUBLIC_SUPABASE_ANON_KEY="your-anon-key-here"
+
 # Database
 DATABASE_URL="postgresql://username:password@localhost:5432/dataliteracy?schema=public"
 
